# Computacao_grafica

./: README.md
tarefa_01_cg/: CMakeLists.txt  main.cpp  tarefa_01_cg.cbp
tarefa_01_cg/include/: Canvas.h  Display.h  Ray.h  Sphere.h  Vector.h
tarefa_01_cg/src/: Canvas.cpp  Display.cpp  Ray.cpp  Sphere.cpp  Vector.cpp
